fixed background video gap

--- a/css/main.css
+++ b/css/main.css
@@ -306,7 +306,7 @@ margin-top: 1rem;
 
 .hero-section__video{
   position: absolute;
-  top: 0;
+  top: -50px;
   transform: translateX(-50%);
   min-width: 100%;
   min-height: 100%;
